<resources>
    <string name="app_name">ReCapp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="i_am_new_user">I Am New User</string>
    <string name="enter_below_details">Enter Below Details</string>
    <string name="make_payment">Make Payment</string>
    <string name="i_don_t_have_code">I Don\'t Have Code</string>
    <string name="i_have_a_code">I Have a Code</string>
    <string name="first_record_what_you_are_defining_explaning_summarazing_for_example">First, Record what you are defining(/explaining /summarizing) For example, \"Definition of tringle.\"</string>
    <string name="actual_defination">Then, Record the actual definition(/explanation/summary)</string>
    <string name="next_question_answer">For Q and A, first record the question, then record the answer</string>
    <string name="finally_saved">Finally, type in a name for the recording to enable you to easily find it again The recording will then be saved.</string>
    <string name="check_the_select_box_next_to_a_chapter_name_to_select_all_content_under_the_chapter_you_can_select_multiple_chapters">Check the \'Select\' box next to a chapter name to select all content under the chapter. You can select multiple chapters.</string>
    <string name="similarly_there_is_a_select_option_next_to_each_topic_again_mutiple_topicscan_be_selected">Similarly, there is a \'Select\' option next to each topic. Again, mutiple topics can be selected.</string>
    <string name="you_can_also_select_individual_content_items">You can also select individual content items</string>
    <string name="you_can_do_this_in_one_of_the_following_ways">You can do this in one of the following ways:</string>
    <string name="please_select_the_content_you_wish_to_revise">Please select the content you wish to revise:</string>
    <string name="play_continuously">Play \nContinuously</string>
    <string name="please_select_the_content_you_wish_to_recap">Please select the content you wish to recap:</string>
    <string name="for_example_say_definition_of_dna">For example, say: \'Definition of DNA\'</string>
    <string name="for_example_say_definitio_of_dna">For example, say: \'Definition of DNA\'</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="revise_help">Revise Help</string>
    <string name="record_help">Record Help</string>
    <string name="no_internet">Without internet connection.</string>
    <string name="progress_login">Log in...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
