<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="false"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include layout="@layout/layout_actionbar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_relative_gradient">

        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I Have Login Details"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:typeface="sans"
            android:layout_marginBottom="20dp"
            android:textColor="@color/font_colorBlack"/>

        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:cardCornerRadius="28dp"
            app:cardElevation="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_userName_Login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_btn_roundcorner_white"
                    android:hint="Username"
                    android:textColorHint="@color/colorOffWhite"
                    android:textColor="@color/colorOrange"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:gravity="center"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:cardCornerRadius="28dp"
            app:cardElevation="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_password_Login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_btn_roundcorner_white"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:gravity="center"
                    android:textColorHint="@color/colorOffWhite"
                    android:textColor="@color/colorOrange"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_login_Login"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_roundcorner_orange"/>

       </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:orientation="horizontal"
            android:weightSum="2"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:typeface="sans"
                android:layout_marginTop="1dp"
                android:textColor="@color/font_colorBlack"
                android:text="@string/i_am_new_user"/>

            <Button
                android:id="@+id/btn_register_Login"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_roundcorner_yellow"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey_lightline"
            android:layout_above="@id/ll_bottomLayout"
            ></View>

    </RelativeLayout>
    </LinearLayout>
</FrameLayout>